--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Alondra's blog
-logo: /assets/img/logo.png
+logo: /assets/img/logo.gif
 description: This is a blog to record my learning path during said program.
 show_downloads: false
 google_analytics:
